k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-base
  namespace: flask-base
spec:
  type: ClusterIP
  selector:
    app: flask-base
  ports:
    - name: http
      port: 80
      targetPort: 8000
